--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
 @layer base {
   body {
     font-size: var(--text-sm);
+    font-family: 'Roboto', sans-serif;
   }
   td {
     text-transform: capitalize;
@@ -74,5 +75,10 @@
         background-color: var(--color-green-800);
       }
     }
+  }
+
+  .container {
+    padding: 2rem;
+    margin: 0 auto;
   }
 }
