--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,9 @@
     align-items: center;
     color: var(--color-white);
     padding-block: calc(var(--spacing) * 2);
+    padding-inline: calc(var(--spacing) * 4);
     border-radius: var(--radius-md);
+    cursor: pointer;
   }
 
   @property --tw-border-opacity {
@@ -39,9 +41,11 @@
   .input {
     background-color: transparent;
     padding: calc(var(--spacing) * 2);
-    border-style: var(--tw-border-style);
+    font-size: var(--text-sm);
+    border-style: solid;
     border-width: 1px;
-    border-color: var(--color-slate-800);
+    border-color: var(--color-slate-700);
+    border-radius: var(--radius-md);
     background-color: var(--color-slate-700);
     background-color: transparent;
     --tw-outline-style: none;
