--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,6 +25,10 @@
     padding-inline: calc(var(--spacing) * 4);
     border-radius: var(--radius-md);
     cursor: pointer;
+    &:disabled {
+      background-color: var(--color-gray-400) !important;
+      cursor: not-allowed;
+    }
   }
 
   @property --tw-border-opacity {
